# subpar

./: Makefile  readme.md
deploy/: Caddyfile  Dockerfile  compose.yaml  nginx.conf  reload.sh
deploy/static/: complex.html  index.html
site/: all.html  complex.html  main.js  style.css
subparsvc/: .gitignore  Cargo.toml
subparsvc/subpardb/: Cargo.toml
subparsvc/subpardb/src/: lib.rs  main.rs  position.rs  response.rs  schedule.rs
subparsvc/subparlib/: Cargo.toml  build.rs
subparsvc/subparlib/src/: lib.rs
subparsvc/subparlib/src/api/: .mod.rs.swo  mod.rs
subparsvc/subparlib/src/client/: error.rs  feed.rs  listener.rs  mod.rs  sched.rs
subparsvc/subparlib/src/client/pb/: .gtfs_realtime.rs.swo  gtfs_realtime.rs  mod.rs  nyct_subway.rs
subparsvc/subparlib/src/manifest/: csv.rs  mod.rs  stop.rs
subparsvc/subparlib/src/msg/: batch.rs  datetime.rs  mod.rs  position.rs  schedule.rs  trip.rs
subparsvc/subparlib/src/proto/: gtfs_realtime.rs  mod.rs  nyct_subway.rs  parse1.rs
subparsvc/subparlib/src/state/: complex.rs  elevators.rs  mod.rs  trains.rs
subparsvc/subparlib/src/utils/: mod.rs  sso.rs  timestamp.rs
subparsvc/subparlib/src/web/: .mod.rs.swo  mod.rs
subparsvc/subparweb/: Cargo.toml
subparsvc/subparweb/src/: lib.rs  main.rs
