[package]
name = "subpardb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.40", features = ["full", "time" ] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4", "with-uuid-1"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-futures = "0.2"
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
structopt = "0.3"
futures = "0.3"
tracing-subscriber = "0.3"
arrayvec = { version = "0.7.6", features = ["serde"] }
deadpool-postgres = "0.14.0"
uuid = { version = "1.0" }
metrohash = "1.0.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

subpar = { path = "../subparlib" }
