[package]
name = "subpar"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1.40", features = ["full", "time" ] }
tokio-stream = "0.1"
tracing = "0.1.40"
tracing-futures = "0.2"
protobuf = "2.11"
anyhow = "1"
async-stream = "0.3"
hyper = { version = "0.14", features = ["client", "http1"] }
hyper-tls = "0.5"
http = "0.2.6"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
fnv = "1"
structopt = "0.3"
futures = "0.3"
tracing-subscriber = "0.3"
arrayvec = { version = "0.7.6", features = ["serde"] }
uuid = { version = "1.0" }
metrohash = "1.0.6"
serde = { version = "1.0.210", features = ["derive"] }
reqwest = { version = "0.12.8", features = ["json"] }
serde_json = "1.0"

[build-dependencies]
protoc-rust = "2.28"

# [build]
# rustflags = ["--cfg", "tokio_unstable"]
