[package]
name = "subparweb"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.40", features = ["full", "time" ] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3"
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
structopt = "0.3"
futures = "0.3"
arrayvec = { version = "0.7.6", features = ["serde"] }
uuid = { version = "1.0" }
axum = "0.7.7"
serde = { version = "1.0.210", features = ["derive"] }
reqwest = { version = "0.12.8", features = ["json"] }
serde_json = "1.0.128"
subpar = { path = "../subparlib" }
tower-http = { version = "0.6.1", features = ["cors"] }
http = "1.1.0"

# [build]
# rustflags = ["--cfg", "tokio_unstable"]
